修复PDF无法上传问题